Ensure hostnames are not cut off in template

--- a/styles/shodan.less
+++ b/styles/shodan.less
@@ -5,6 +5,7 @@
   padding: 3px 3px 2px 3px;
   display: inline-block;
 }
+
 .summary-try-again-button {
   padding: 0px 3px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -24,11 +25,16 @@
   margin: 0px 0px 1px 3px;
 }
 
+.p-block {
+  word-break: break-word;
+}
+
 .data-block {
   border-left: 1px solid #eee;
   padding-left: 5px;
   margin-left: 0px;
 }
+
 div.service-pill {
   display: inline-block;
   line-height: 2em;
